kubernetes/efk/kibana/kibana.yaml
# ---
# Source: https://www.digitalocean.com/community/tutorials/how-to-set-up-an-elasticsearch-fluentd-and-kibana-efk-logging-stack-on-kubernetes
# kind: PersistentVolumeClaim
# apiVersion: v1
# metadata:
#   name: kibana-claim
#   namespace: efk
# spec:
#   accessModes:
#   - ReadWriteMany 
#   storageClassName: local-storage
#   selector:
#     matchLabels:
#       contenttype: "kibana"
#   resources:
#     requests:
#       storage: 200Gi
# ---
# kind: PersistentVolumeClaim
# apiVersion: v1
# metadata:
#   name: kibana-config-claim-local
#   namespace: efk
# spec:
#   accessModes:
#   - ReadWriteMany 
#   storageClassName: local-storage
#   selector:
#     matchLabels:
#       contenttype: "kibana-config-local"
#   resources:
#     requests:
#       storage: 20Gi
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana
  namespace: efk
spec:
  replicas: 1
  template:
    metadata:
      labels:
        task: efk
        k8s-app: kibana
    spec:
      containers:
      - name: kibana
        ports:
        - containerPort: 5601 
        image: kibana:7.0.1
        # volumeMounts:
        #   - name: kibana
        #     mountPath: /home/coder/project
        #   - name: kibana-config-local
        #     mountPath: /home/coder/.local
        #   - name: kibana-config-vscode
        #     mountPath: /home/coder/.vscode
        #   - name: kibana-init
        #     mountPath: /seb/init.sh
        #     subPath: init.sh
      # volumes:
      #   - name: kibana
      #     persistentVolumeClaim:
      #       claimName: kibana-claim
      #   - name: kibana-config-local
      #     persistentVolumeClaim:
      #       claimName: kibana-config-claim-local
      #   - name: kibana-config-vscode
      #     persistentVolumeClaim:
      #       claimName: kibana-config-claim-vscode
      #   - name: kibana-init
      #     configMap:
      #       name: kibana-init
      #       items:
      #       - key: init.sh
      #         path: init.sh
      #       defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: efk
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: kibana
  name: kibana
  namespace: efk
spec:
  ports:
  - port: 80
    targetPort: 5601
  selector:
    k8s-app: kibana
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: efk
spec:
  rules:
  - host: kibana.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 80
